tests/programs/a1/local/valid/ConstructorExample.java
public class ConstructorExample {
    public ConstructorExample() {
        System.out.println("Constructor called.");
    }
}
