tests/programs/a1/local/invalid/InvalidAscii.java
public class InvalidAscii {
    public static void main(String[] args) {
        System.out.println("Invalid ASCII character: ©");
    }
}
